fixed mobile view opacity issue

--- a/css/theme_extra.css
+++ b/css/theme_extra.css
@@ -382,7 +382,7 @@ div.images {
 }
 
 @media screen and (max-width:768px){
-	span.Reach, span.Navio{
+	span.Reach, span.Navio, span.Navio_plus{
     opacity: 1;
   }
   span.images-2 {
